Fixed post content overflow bug.

--- a/app/stylesheets/index.css
+++ b/app/stylesheets/index.css
@@ -33,6 +33,10 @@ body {
     cursor: pointer;
 }
 
+#login-button {
+    cursor: pointer;
+}
+
 
 /* Posts page */
 
@@ -60,18 +64,18 @@ body {
 }
 
 .post {
-    padding: 15px;
-    margin: 20px 0;
-    /*border: 1px solid #e0e0e0;*/
+    padding: 10px;
+    margin: 15px 0;
     border-radius: 3px;
     background-color: white;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     position: relative;
+    display: flex;
 }
 
 .post .left-col {
-    float: left;
     width: 85px;
+    margin-right: 10px;
 }
 
 .post .right-col {
